@@ -69,6 +69,7 @@ class clsUtil
 		static bool __fastcall SaveForm(TForm *pfrmForm);
 		static bool __fastcall CopyToRecycleBin(const TCHAR *pacSource);
 		static bool __fastcall SetTaskListProgress(unsigned int piCompleted, unsigned int piTotal);
+		static unsigned int __fastcall GetWindowsVersion(void);
 };
 
 // ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------
